Fix code pre tag spacing

--- a/src/components/shared/TextEditor/TextEditor.module.scss
+++ b/src/components/shared/TextEditor/TextEditor.module.scss
@@ -60,7 +60,8 @@ pre {
   font-family: 'JetBrainsMono', monospace;
   padding: 0.75rem 1rem;
   border-radius: 0.5rem;
-
+  margin: 12px 0;
+  
   code {
       color: inherit;
       padding: 0;
